--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "NODE_ENV=test jest",
     "lint": "eslint . --ext .js,.ts",
     "start": "ts-node src/index.ts",
+    "generate:parser": "syntax-cli --grammar parser/eva-grammar.bnf --mode LALR1 --output parser/evaParser.js",
     "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand",
     "start:debug": "node --require ts-node/register --inspect-brk src/index.ts"
   },
@@ -28,5 +29,8 @@
     "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
+  },
+  "dependencies": {
+    "syntax-cli": "^0.1.19"
   }
 }
