--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "eva-interpreter",
+  "name": "ast-interpreter",
   "version": "1.0.0",
   "description": "",
   "license": "MIT",
   "main": "dist/index.js",
-  "repository": "minidonut/eva-interpreter",
+  "repository": "minidonut/ast-interpreter",
   "scripts": {
     "build": "tsc",
     "test": "NODE_ENV=test jest",
